# orbital-mechanics-notes

./: .buildinfo  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .mise.toml  .rtx.toml  .taplo.toml  CNAME  INSTALL.md  Manifest.toml  Project.toml  _config.yml  _toc.yml  bibliography.html  bibliography.md  dodo.py  freeze.txt  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
.devcontainer/: Dockerfile.math-api  Dockerfile.workspace  devcontainer.json  docker-compose.yml  fix-permissions  packages.jl
_sources/: bibliography.md  intro.md
_static/: copyHeaderPermalink.css  copyHeaderPermalink.js
blender/: cg-relative-two-body.blend  m1-relative-two-body.blend  two-body-inertial.blend  two-body-relative.blend
chapter-1/: 3-kinematics.html  4-mass-force-and-newtons-law-of-gravitation.html  4-mass-force-and-newtons-law-of-gravitation.ipynb  5-newtons-laws.html  6-time-derivatives-of-moving-vectors.html  7-relative-motion.html  7-relative-motion.md  intro.html
chapter-2/: 10-perifocal-frame.html  11-the-lagrange-coefficients.html  11-the-lagrange-coefficients.md  12-circular-restricted-three-body-problem.html  12-circular-restricted-three-body-problem.md  12a-Lagrange-points-example.html  12a-Lagrange-points-example.ipynb  12b-Equations-of-Motion-CR3BP.html  12b-Equations-of-Motion-CR3BP.ipynb  2-equations-of-motion-in-an-inertial-frame.html  2a-two-body-inertial-example.html  3-equations-of-relative-motion.html  3-equations-of-relative-motion.md  3a-two-body-relative-motion-example.html  3a-two-body-relative-motion-example.ipynb  4-angular-momentum-and-the-orbit-formulas.html  4-angular-momentum-and-the-orbit-formulas.md  5-the-energy-law.html  5-the-energy-law.md  6-circular-orbits.html  6-circular-orbits.md  7-elliptical-orbits.html  7-elliptical-orbits.md  8-parabolic-trajectories.html  9-hyperbolic-trajectories.ipynb  hyperbolic_trajectory.py
chapter-3/: 2-time-since-periapsis.html  2-time-since-periapsis.md  3-circular-orbits.html  4-elliptical-orbits.html  4-elliptical-orbits.md  4a-Elliptical-Orbit-Example.html  4a-Elliptical-Orbit-Example.ipynb  5-parabolic-trajectories.html  6-hyperbolic-trajectories.html  6-hyperbolic-trajectories.md  6a-Hyperbolic-Trajectory-Example.html  7-universal-variables.html  7-universal-variables.md  7a-Universal-Variables-Example.html  7b-Universal-Lagrange-Coefficients-Example.html  7b-Universal-Lagrange-Coefficients-Example.ipynb  the-lagrange-coefficients.md
chapter-4/: 2-geocentric-right-ascension-declination-frame.html  3-state-vector-and-the-geocentric-equatorial-frame.html  4-orbital-elements-and-the-state-vector.html  4-orbital-elements-and-the-state-vector.md  5-coordinate-transformations.html  5-coordinate-transformations.md  6-transformation-between-geocentric-equatorial-and-perifocal-frames.html  7-effects-of-the-earths-oblateness.html  7-effects-of-the-earths-oblateness.md
chapter-6/: 10-nonimpulsive-orbital-maneuvers.html  10a-nonimpulsive-maneuver-example.html  10a-nonimpulsive-maneuver-example.ipynb  2-impulsive-maneuvers.html  2a-single-impulse-example.html  2a-single-impulse-example.ipynb  3-hohmann-transfer.html  4-bielliptic-hohmann-transfer.html  4a-comparison-of-bielliptic-and-hohmann.html  4a-comparison-of-bielliptic-and-hohmann.ipynb  5-phasing-maneuvers.html  6-non-hohmann-transfers.html  6-non-hohmann-transfers.md  7-apse-line-rotation.html  7-apse-line-rotation.md  8-chase-maneuvers.html  8-chase-maneuvers.md  9-plane-change-maneuvers.html  9-plane-change-maneuvers.md  9a-plane-change-example.html  kennedy-launch-angles.html  kennedy-launch-angles.ipynb
chapter-8/: 10-planetary-ephemeris.html  10-planetary-ephemeris.ipynb  2-interplanetary-hohmann-transfers.html
classical-orbital-elements/: classical-orbital-elements.html  classical-orbital-elements.md  orbital-elements-and-the-state-vector.html  orbital-elements-and-the-state-vector.md  perifocal-frame.html  right-ascension-declination.html
constants-of-orbital-motion/: angular-momentum-is-conserved.html  angular-momentum-is-conserved.md  energy-is-conserved-in-orbital-motion.html  energy-is-conserved-in-orbital-motion.md  orbital-plane-and-keplers-second-law.html
docker/: Dockerfile  Dockerfile.math-api  packages.jl  (+4 more)
(+295 files in other folders)
