#:schema https://json.schemastore.org/pyproject.json
[project]
dependencies = [
    "astropy>=6.0.0",
    "docutils>=0.20.1",
    "ipympl>=0.9.3",
    "jupyter-book>=1.0",
    "matplotlib>=3.8.3",
    "myst-nb-bokeh>=2024.1.0",
    "myst-nb>=1.0.0",
    "numpy>=1.26.4",
    "pint>=0.23",
    "plotly>=5.19.0",
    "poliastro>=0.18.dev0",
    "scipy>=1.12.0",
    "skyfield>=1.48",
    "sphinx-design>=0.5.0",
    "sympy>=1.12",
    "wheel>=0.42.0",
]
requires-python = ">=3.10,<3.13"
name = "orbital-mechanics-notes"
authors = [{ name = "Bryan Weber", email = "bryan.w.weber@gmail.com" }]
license = { text = "CC-BY-SA-4.0" }

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["doit>=0.36.0", "pyyaml>=6.0.1", "ruff>=0.3.2", "requests>=2.31.0"]

[tool.pdm.resolution.overrides]
# Unfortunately, poliastro is no longer maintained. I updated some dependencies on my
# fork to be able to upgrade some other things like astropy. Nothing seems to be broken
# but I'll need a replacement here at some point.
"poliastro" = "https://github.com/bryanwweber/poliastro/archive/main.zip"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "NPY", # NumPy rules
  "RUF", # Ruff rules
]
ignore = ["E402"]
