#:schema https://json.schemastore.org/pyproject.json
[project]
dependencies = [
  "astropy==6.1.1",
  "bokeh==3.4.2",
  "docutils>=0.20.1",
  "ipympl>=0.9.4",
  "jupyter-book>=1.0.2",
  "matplotlib>=3.9.0",
  "myst-nb-bokeh>=2024.1.0",
  "myst-nb>=1.1.1",
  "numpy>=1.26.4",
  "pint>=0.24.1",
  "plotly>=5.22.0",
  "poliastro>=0.18.dev0",
  "scipy>=1.14.0",
  "skyfield>=1.49",
  "sphinx-design>=0.6.0",
  "sympy>=1.12.1",
  "wheel>=0.43.0",
]
requires-python = ">=3.10,<3.13"
name = "orbital-mechanics-notes"
authors = [{ name = "Bryan Weber", email = "bryan.w.weber@gmail.com" }]
license = { text = "CC-BY-SA-4.0" }
description = "A book for Orbital Mechanics"
version = "0.0.0"

[tool.uv]
python-preference = "only-system"

[dependency-groups]
dev = ["doit>=0.36.0", "pyyaml>=6.0.1", "ruff>=0.5.0", "requests>=2.32.3"]
lab = [
    "jupyterlab>=4.1.4",
    "jupytext>=1.16.6",
]

[tool.uv.sources]
# Unfortunately, poliastro is no longer maintained. I updated some dependencies on my
# fork to be able to upgrade some other things like astropy. Nothing seems to be broken
# but I'll need a replacement here at some point.
poliastro = { workspace = true }

[tool.uv.workspace]
members = ["vendor/*"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "NPY", # NumPy rules
  "RUF", # Ruff rules
]
ignore = ["E402"]
